[metadata]
name = nb-postgres-wasm
version = 0.0.2
author = Tony Hirst
author_email = tony.hirst@gmail.com
description = Postgres-WASM
url = https://github.com/ouseful-backup/postgres-wasm

[options]
packages = find:
include_package_data = True
install_requires =
    jupyter-server-proxy

[options.package_data]
postgres_wasm =
    icons/*
    static/**/*

[options.entry_points]
jupyter_serverproxy_servers =
    postgres_wasm = postgres_wasm:setup_postgres_wasm